--- a/webservice-frontend/app/index.html
+++ b/webservice-frontend/app/index.html
@@ -65,12 +65,13 @@
             <li><a href="#/analysis"><i class="fa fa-bar-chart"></i> <span>Big Data Analysis</span></a></li>
 			<li><a href="#/database"><i class="fa fa-database"></i> <span>Database Query</span></a></li>
             <li class="treeview">
-              <a href="#"><i class="fa fa-exchange"></i> <span>Tracking Service</span> <i class="fa fa-angle-left pull-right"></i></a>
+			 <a href="#"><i class="fa fa-exchange"></i> <span>Tracking Service</span> <i class="fa fa-angle-left pull-right"></i></a>
               <ul class="treeview-menu">
                 <li><a href="#/request">Request Data</a></li>
                 <li><a href="#/token">Manage Users</a></li>
               </ul>
             </li>
+			<li><a href="#/about"><i class="fa fa-globe"></i> <span>About</span></a></li>
           </ul><!-- /.sidebar-menu -->
         </section>
         <!-- /.sidebar -->
