--- a/webservice-frontend/app/index.html
+++ b/webservice-frontend/app/index.html
@@ -20,7 +20,7 @@
 
 		<header class="main-header">
 
-			<a href="index2.html" class="logo">
+			<a href="#/" class="logo">
 				<span class="logo-mini"><b>S</b>tlkr</span>
 				<span class="logo-lg"><b>Instagram</b>Stalker</span>
         </a>
@@ -61,9 +61,9 @@
           <ul class="sidebar-menu">
             <li class="header">DO SOMETHING!</li>
             <!-- Optionally, you can add icons to the links -->
-            <li class="active"><a href="#/"><i class="fa fa-dashboard"></i> <span>Dashboard</span></a></li>
-            <li><a href="#/analysis"><i class="fa fa-bar-chart"></i> <span>Big Data Analysis</span></a></li>
-			<li><a href="#/database"><i class="fa fa-database"></i> <span>Database Query</span></a></li>
+            <li class="active"><a href="#/" class="sidebarbutton"><i class="fa fa-dashboard"></i> <span>Dashboard</span></a></li>
+            <li><a href="#/analysis" class="sidebarbutton"><i class="fa fa-bar-chart"></i> <span>Big Data Analysis</span></a></li>
+			<li><a href="#/database" class="sidebarbutton"><i class="fa fa-database"></i> <span>Database Query</span></a></li>
             <li class="treeview">
 			 <a href="#"><i class="fa fa-exchange"></i> <span>Tracking Service</span> <i class="fa fa-angle-left pull-right"></i></a>
               <ul class="treeview-menu">
@@ -85,10 +85,6 @@
             Page Header
             <small>Optional description</small>
           </h1>
-          <ol class="breadcrumb">
-            <li><a href="#/"><i class="fa fa-dashboard"></i> Level</a></li>
-            <li class="active">Dashboard</li>
-          </ol>
         </section>
 
         <!-- Main content -->
