--- a/webservice-frontend/app/index.html
+++ b/webservice-frontend/app/index.html
@@ -68,7 +68,7 @@
 			 <a href="."><i class="fa fa-exchange"></i> <span>Tracking Service</span> <i class="fa fa-angle-left pull-right"></i></a>
               <ul class="treeview-menu">
                 <li><a href="#/request">Request Data</a></li>
-                <li><a href="#/token">Manage Users</a></li>
+                <li><a href="#/token">Application Settings</a></li>
               </ul>
             </li>
 			<li><a href="#/about"><i class="fa fa-globe"></i> <span>About</span></a></li>
