--- a/webservice-frontend/app/index.html
+++ b/webservice-frontend/app/index.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"/>
     <link rel="stylesheet" href="styles/AdminLTE.min.css"/>
 	<link rel="stylesheet" href="styles/skin-blue.min.css"/>
-	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/select2/4.0.1/css/select2.min.css"/>
+	<link rel="stylesheet" href="styles/select2.css"/>
   </head>
   <body class="hold-transition skin-blue sidebar-mini" ng-app="testXApp">
 
