--- a/webservice-frontend/app/index.html
+++ b/webservice-frontend/app/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"/>
 	<link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"/>
-    <link rel="stylesheet" href="styles/AdminLTE.min.css"/>
+    <link rel="stylesheet" href="styles/AdminLTE.css"/>
 	<link rel="stylesheet" href="styles/skin-blue.min.css"/>
 	<link rel="stylesheet" href="styles/select2.css"/>
   </head>
