--- a/webservice-frontend/app/index.html
+++ b/webservice-frontend/app/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="styles/AdminLTE.css"/>
 	<link rel="stylesheet" href="styles/skin-blue.min.css"/>
 	<link rel="stylesheet" href="styles/select2.css"/>
+	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.1.0/styles/tomorrow.min.css"/>
   </head>
   <body class="hold-transition skin-blue sidebar-mini" ng-app="testXApp">
 
@@ -61,17 +62,17 @@
           <ul class="sidebar-menu">
             <li class="header">DO SOMETHING!</li>
             <!-- Optionally, you can add icons to the links -->
-            <li ng-class="active"><a href="#/main" class="sidebarbutton"><i class="fa fa-dashboard"></i> <span>Dashboard</span></a></li>
-            <li><a href="#/analysis" class="sidebarbutton"><i class="fa fa-bar-chart"></i> <span>Big Data Analysis</span></a></li>
-			<li><a href="#/database" class="sidebarbutton"><i class="fa fa-database"></i> <span>Database Query</span></a></li>
-            <li class="treeview">
+            <li ng-class="{'active': ('main' | routeSegmentStartsWith)}"><a href="#/main" class="sidebarbutton"><i class="fa fa-dashboard"></i> <span>Dashboard</span></a></li>
+            <li ng-class="{'active': ('analysis' | routeSegmentStartsWith)}"><a href="#/analysis" class="sidebarbutton"><i class="fa fa-bar-chart"></i> <span>Big Data Analysis</span></a></li>
+			<li ng-class="{'active': ('database' | routeSegmentStartsWith)}"><a href="#/database" class="sidebarbutton"><i class="fa fa-database"></i> <span>Database Query</span></a></li>
+            <li class="treeview" ng-class="{'active': ('request' | routeSegmentStartsWith) || ('token' | routeSegmentStartsWith)}">
 			 <a href="{$routeSegment.name}"><i class="fa fa-exchange"></i> <span>Tracking Service</span> <i class="fa fa-angle-left pull-right"></i></a>
               <ul class="treeview-menu">
                 <li><a href="#/request">Request Data</a></li>
                 <li><a href="#/token">Application Settings</a></li>
               </ul>
             </li>
-			<li><a href="#/about"><i class="fa fa-globe"></i> <span>About</span></a></li>
+			<li ng-class="{'active': ('about' | routeSegmentStartsWith)}"><a href="#/about"><i class="fa fa-globe"></i> <span>About</span></a></li>
           </ul><!-- /.sidebar-menu -->
         </section>
         <!-- /.sidebar -->
@@ -181,6 +182,7 @@
         <script src="scripts/controllers/about.js"></script>
 		<script src="scripts/angular-route-segment.js"></script>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/select2/4.0.1/js/select2.min.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.1.0/highlight.min.js"></script>
         <!-- endbuild -->
 </body>
 </html>
